--- a/index.html
+++ b/index.html
@@ -57,3 +57,44 @@
         }
     </style>
 </head>
+<body></body>
+    <div class="container">
+        <h1>Restaurantes Favoritos</h1>
+
+        <div class="restaurant">
+            <h2>El Celler de Can Roca</h2>
+            <img src="" alt="El Celler de Can Roca">
+            <p><strong>Ubicación:</strong> Girona, España</p>
+            <p><strong>Descripción del menú:</strong> Cocina creativa y de vanguardia con influencias catalanas. Ofrece una experiencia gastronómica única con platos innovadores y técnicas culinarias avanzadas.</p>
+        </div>
+
+        <div class="restaurant">
+            <h2>Asador Etxebarri</h2>
+            <img src="" alt="Asador Etxebarri">
+            <p><strong>Ubicación:</strong> Atxondo, España</p>
+            <p><strong>Descripción del menú:</strong> Especializado en parrilla, ofrece carnes y mariscos cocinados a la perfección con un enfoque en ingredientes frescos y de alta calidad.</p>
+        </div>
+
+        <div class="restaurant">
+            <h2>DiverXO</h2>
+            <img src="" alt="DiverXO">
+            <p><strong>Ubicación:</strong> Madrid, España</p>
+            <p><strong>Descripción del menú:</strong> Cocina de autor con influencias asiáticas y europeas. Conocido por su creatividad y presentaciones artísticas, ofrece una experiencia culinaria sorprendente.</p>
+        </div>
+
+        <div class="restaurant">
+            <h2>Arzak</h2>
+            <img src="" alt="Arzak">
+            <p><strong>Ubicación:</strong> San Sebastián, España</p>
+            <p><strong>Descripción del menú:</strong> Cocina vasca moderna con un enfoque en la innovación y la tradición. Ofrece platos que combinan sabores locales con técnicas contemporáneas.</p>
+        </div>
+
+        <div class="restaurant">
+            <h2>Elkano</h2>
+            <img src="" alt="Elkano">
+            <p><strong>Ubicación:</strong> Getaria, España</p>
+            <p><strong>Descripción del menú:</strong> Especializado en pescados y mariscos a la parrilla. Conocido por su rodaballo a la brasa, ofrece una experiencia gastronómica centrada en la frescura y la calidad del producto.</p>
+        </div>
+    </div>
+</body>
+</html>
