--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 5</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f0f5;
+            font-family: 'Georgia', serif;
+            background-color: #fafafa;
             color: #333;
             margin: 0;
             padding: 0;
@@ -19,10 +19,11 @@
         h1 {
             margin-top: 20px;
             font-size: 2.5em;
+            font-weight: bold;
         }
         .container {
-            width: 90%;
-            max-width: 1200px;
+            width: 85%;
+            max-width: 1100px;
             margin: auto;
             overflow: hidden;
         }
@@ -31,7 +32,8 @@
             padding: 20px;
             margin: 20px 0;
             border-radius: 10px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-left: 5px solid #ff6347;
         }
         .restaurant img {
             display: block;
@@ -42,7 +44,7 @@
         }
         .restaurant p {
             text-align: justify;
-            line-height: 1.6;
+            line-height: 1.8;
         }
         .restaurant h2 {
             margin-bottom: 10px;
@@ -57,7 +59,7 @@
         }
     </style>
 </head>
-<body></body>
+<body>
     <div class="container">
         <h1>Restaurantes Favoritos</h1>
 
